--- a/home1.html
+++ b/home1.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-	<title>Welcome home1</title>
+	<title>Welcome Home2</title>
 
 </head>
 <body>
 	<center>
 		<h1>Welcom to my life</h1>
 		<h2> wr are leaning git </h2>
-		<p>hello</p>
+		<p>get started hello2</p>
 	</center>
 
 </body>
